components/PanelsLayout/PanelsContent.sass
@import colors


.panels-content-layout
  position: absolute
  top: 0
  left: 0
  width: 100vw

  display: flex
  flex-direction: row

  // Style dark and light sides of content

  .container.dark
    flex: 1 0 0

    .content
      color: $white

  .container.light
    flex: 0 0 auto
    position: relative
    width: 40vw
    height: 100vh

    .content
      position: fixed
      top: 0
      width: inherit
      height: 100vh

      color: black

  // Get the order right
  &.panel-on-left,
  &.panel-full
    .container.light
      order: 1
    .container.dark
      order: 2

  &.panel-on-right
    .container.dark
      order: 1

    .container.light
      order: 2

